@@ -1,6 +1,6 @@
 // ------------------------------------------------------------------------
 // eca-chainsetup.cpp: Class representing an ecasound chainsetup object.
-// Copyright (C) 1999-2003 Kai Vehmanen (kai.vehmanen@wakkanet.fi)
+// Copyright (C) 1999-2004 Kai Vehmanen (kai.vehmanen@wakkanet.fi)
 //
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -2238,69 +2238,9 @@ void ECA_CHAINSETUP::add_default_output(void)
   if (inputs.size() > 0 && outputs.size() == 0) {
 
     // No -o[:] options specified; let's use the default output
-
-    ECA_RESOURCES ecaresources;
-    string default_output = ecaresources.resource("default-output");
-    bool output_selected = true;
-
-    if (default_output == "auto") {
-      
-      output_selected = false;
-
-#ifdef ECA_COMPILE_JACK
-      /* phase 1: check for JACK */
-
-      int pid = getpid();
-      string cname = "ecasound-autodetect-" + kvu_numtostr(pid);
-
-      bool env_changed = false;
-      char* oldenv = getenv("JACK_NO_START_SERVER");
-      if (oldenv == NULL) {
-	env_changed = true;
-	setenv("JACK_NO_START_SERVER", "yes", 1);
-      }
-      
-      jack_client_t *client = jack_client_new (cname.c_str());
-      if (client != 0) {
-	jack_client_close(client);
-	
-	default_output = "jack_alsa";
-	output_selected = true;
-      }
-      
-      if (env_changed == true) {
-	unsetenv("JACK_NO_START_SERVER");
-      }
-#endif
-      
-      /* phase 2: check for ALSA support */
-      if (output_selected != true) {
-	const ECA_OBJECT *obj = ECA_OBJECT_FACTORY::audio_io_rt_map().object("alsa");
-	if (obj != 0) {
-	  default_output = "alsa,default";
-	  output_selected = true;
-	}
-      }
-      
-      /* phase 3: check for OSS support */
-      if (output_selected != true) {
-	const ECA_OBJECT *obj = ECA_OBJECT_FACTORY::audio_io_rt_map().object("/dev/dsp");
-	if (obj != 0) {
-	  default_output = "/dev/dsp";
-	  output_selected = true;
-	}
-      }
-      
-      /* phase 4: fallback to rtnull */
-      if (output_selected != true) {
-	ECA_LOG_MSG(ECA_LOGGER::info,
-		    "(eca-chainsetup) Warning! No default output available. Using 'rtnull' as a fallback.");
-	  default_output = "rtnull";
-      }
-    }
     
     select_all_chains();
-    interpret_object_option(string("-o:" + default_output));
+    interpret_object_option(string("-o:") + ECA_OBJECT_FACTORY::probe_default_output_device());
   }
 }
 
